fix: update z-index for Pokémon images to improve layering

--- a/media/pokemon.css
+++ b/media/pokemon.css
@@ -126,7 +126,7 @@ img.pokemon {
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
-	z-index: 2;
+	z-index: 10;
 }
 
 .collision {
